# signal-processing-notebooks

./: .gitignore  README.md  TODO  TODO.md  __init__.py  custom_waveshape.ipynb  epicycles.ipynb  filters.ipynb  frequency_multiplication.ipynb  jupyter.env.example  pyproject.toml  requirements.txt  run-web-readonly.sh  run.bat  run.sh  snvtest.ipynb  synthesizer.ipynb
cells/: __init__.py  epicycles.py  filter_chain.py  lattice_visualizer.py  pedal-oscillator.py  play_audio_custom_wave.py  play_audio_multiplication.py  plot_multiplication.py  synthesizer.py
cells/filter_chain/: __init__.py  constants.py  helpers.py  plotting.py  processing.py  ui.py
docs/: tree.md
notebooks/: custom_waveshape.ipynb  epicycles.ipynb  filters.ipynb  frequency_multiplication.ipynb  snvtest.ipynb  synthesizer.ipynb
notebooks/emml/: k-means-clustering.ipynb
notebooks/pedals/: oscillator.ipynb
notebooks/showcase/: clustering.ipynb  lattice-vectors.ipynb  (+1 more)
pedals/: oscillator.ipynb
tools/: clean_notebooks.py  gen_init.py  gen_tree.py  gen_usages.py  jupyter_readonly_contents.py
utils/: STYLES.py  __init__.py  audio.py  audio_files.py  clustering_viz.py  filters.py  fourier.py  plots.py  query.py  signals.py  texrender.py  ui.py
widget/: __init__.py  audio_engine.js  audio_widget.css  audio_widget.py  draw_canvas.css  draw_canvas.js  draw_grid.css  draw_grid.js  draw_grid_widget.py  draw_widget.py  epicycles.css  epicycles.js  epicycles_widget.py  knob.css  knob.js  knob_widget.py  midi_input.js  midi_input_widget.py  switch.css  switch.js  switch_widget.py  theme.css
(+29 files in other folders)
