[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-processing-notebooks"
version = "0.1.0"
description = "Interactive signal-processing notebooks and widgets"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["cells*", "utils*", "widget*"]

[tool.black]
# NO BLACK FORMATTING FOR IPYNB
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
)/
'''